apps/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bsis-app
spec:
  tls:
    - hosts:
        - app.example.com
      secretName: bsis-app-prod-tls
  rules:
    - host: app.example.com
